# RCW-Processing-Suite

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  case_test.xlsx  create_test_lennar.py  create_test_metadata_file.py  debug_excel.py  debug_project_name.py  deep_scan.py  docker-compose.yml  downloaded_output.xlsx  downloaded_test_output.xlsx  edge_cases.xlsx  extract_metadata.py  extract_project_metadata.py  final_test.xlsx  generated_summary.xlsx  hours_sheet.xlsx  input_contract_data_REFERENCE.xlsx  input_contract_data_example.xls  input_data_example.xls  inspect_excel.py  inspect_excel2.py  pyproject.toml  rc_wendt_test.xlsx  requirements.txt  test_autosize.py  test_autosize_input.xlsx  test_column_m.xlsx  test_column_order.xlsx  test_exact_format.py  test_filename.py  test_final_output.py  test_highlight_input.xlsx  test_merged_cells.py  test_metadata.xlsx  (+8 more)
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/: deps.py  lennar_routes.py
app/core/: config.py  registry.py  security.py
app/data/: classification_config.yaml  mapping_rules.yaml
app/db/: session.py
app/models/: __init__.py  schemas.py  user.py
app/modules/: __init__.py
app/services/: __init__.py  aggregator.py  category_mapper.py  classifier.py  excel_writer.py  gas_rig.py  jobs.py  parser_lennar.py  worker_tasks.py
app/static/: styles.css
app/templates/: index.html  professional_interface.html  result.html  tabbed_interface.html
app/workers/: tasks.py
data/outputs/: 07fd198d-8876-4c87-9f20-5837c6f1c543_summary.xlsx  0b00be0b-fa57-47f9-b889-f5143d43426f_summary.xlsx  2f9688ef-f44a-4a13-aa3c-db7a56c957cc_summary.xlsx  421edfe0-fc6e-440b-9e60-256931b4be94_summary.xlsx  5c89a68d-3cfa-40ec-8c64-fc6ba9c67c5a_summary.xlsx  6c918a5e-cafd-447a-8064-f1ac0836b32e_summary.xlsx  8f9e480f-9a8c-4fc5-84c0-d64d735a2a24_summary.xlsx  901a1ba6-28fd-45f9-b569-fae4a2ae725e_summary.xlsx  97db36d8-b3da-4302-9d99-edcddffdfc77_summary.xlsx  9a297441-bd75-43d1-9e70-460fe0a57191_summary.xlsx  9d7c3bf6-adea-4cc0-9e1a-a37a05bcea92_summary.xlsx  Arches 7 Mock Up _Contracts_Forms_35b8a60f.xlsx  Input-Test-Ex-1_Contracts_Forms_008797bd.xlsx  Input-Test-Ex-1_Contracts_Forms_387eead9.xlsx  Input-Test-Ex-1_Contracts_Forms_d61bab06.xlsx  Input-Test-Ex-1_Contracts_Forms_dd97a52f.xlsx  Input-Test-Ex-1_Contracts_Forms_e306f95d.xlsx  Input-Test-Ex-2-Adjusted_Contracts_Forms_df69d4a3.xlsx  Input-Test-Ex-2_1_Contracts_Forms_da974bae.xlsx  Input-Test-Ex-2_Contracts_Forms_1bd4110b.xlsx  Input-Test-Ex-2_Contracts_Forms_9d19a3a7.xlsx  Input-Test-Ex-2_Contracts_Forms_f8473375.xlsx  Input-Test-Ex-3_Contracts_Forms_97e6dd38.xlsx  Input-Test-Ex-4_Contracts_Forms_f5199736.xlsx  Input-Test-Var-1_Contracts_Forms_6ddab4ed.xlsx  Input-Test-Var-2_Contracts_Forms_8b9bc1a1.xlsx  Test_Contracts_Forms_c2564cd6.xlsx  Test_Contracts_Forms_e374117f.xlsx  Variation-of-test_Contracts_Forms_1eeb93f0.xlsx  Variation-of-test_Contracts_Forms_d78a5bf6.xlsx  Variation-of-test_Contracts_Forms_eb9e4702.xlsx  b31aede3-3c8e-48a5-b884-9e1268fdba67_summary.xlsx  b4372301-0d2a-4270-9aef-6a72bd6b279d_summary.xlsx  c811c0ee-1f99-47c0-9b84-6ccbe84ad113_summary.xlsx  capital_one_card_014d2712-4195-4893-b68f-b1173943134b.xlsx  capital_one_card_3f3124d0-e446-4217-a647-9a3652106083.xlsx  capital_one_card_4da5ee60-55f7-4c4d-a465-bb0edefed61b.xlsx  capital_one_card_4dc15ab8-e8b8-4c1d-8b9f-3f2d5076c0b1.xlsx  capital_one_card_8d74efb1-034a-4d1f-b16a-1cee34af2c89.xlsx  capital_one_card_98283b10-b81c-4023-80bd-e17b307b3cef.xlsx  (+56 more)
data/uploads/: 008797bd-15a1-45d4-8b4f-4687cdb4dd18.xlsx  0b46d697-8ac1-4790-ad94-7cba0c10075d.xlsx  1eeb93f0-6a25-430b-96a8-79484ed8eb77.xlsx  29712afd-b696-4088-a9bf-10b2fb7921b2.xlsx  2f704772-8739-483f-94b9-93d53d56c25b.xlsx  35b8a60f-25e7-47ca-9329-288210516d32.xlsx  387eead9-65c9-4116-a69d-ef29c3751bdf.xlsx  (+19 more)
test_data/: test_variation_1.xlsx  test_variation_2.xlsx  test_variation_3.xlsx  test_variation_4.xlsx  test_variation_5.xlsx
tests/: test_capital_one_card.py  test_category_mapper.py  test_classifier.py  test_classifier_signals.py  test_health.py  test_merchant_charges.py
(+24 files in other folders)
