[tool.poetry]
name = "rcw-processing-suite"
version = "1.1.0"
description = "Excel processing suite for RC Wendt Painting — pluggable modules for Lennar tasks, Gas & Rig hours, and Missed Clock-In warning notices."
authors = ["RC Wendt Painting"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
python-multipart = "^0.0.6"
jinja2 = "^3.1.3"
openpyxl = "^3.1.2"
pandas = "^2.1.4"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/modules/gas_rig/services.py" = ["N806"]
"app/modules/missed_clock_in/generate_warnings.py" = ["N803"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
